force-app/main/default/objects/Transfer__c/Transfer__c.object-meta.xml
<CustomObject>
    <description>This object allows multiple transfer records against a deal.</description>
    <label>Transfer</label>
    <nameField>
        <label>Transfer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transfers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>