force-app/main/default/objects/Transfer__c/fields/Day_Number__c.field-meta.xml
<CustomField>
    <fullName>Day_Number__c</fullName>
    <inlineHelpText>Please specify the itinerary day that this transfer is scheduled for.</inlineHelpText>
    <label>Day#</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>