force-app/main/default/objects/Transfer__c/fields/Included_Number_of_Transfers__c.field-meta.xml
<CustomField>
    <fullName>Included_Number_of_Transfers__c</fullName>
    <description>If transfer type = &apos;Group&apos;, this field allows BDM to specify the number of transfers /deal</description>
    <label>Included Number of Transfers</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Transfer_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>