force-app/main/default/objects/Transfer__c/fields/To_Location__c.field-meta.xml
<CustomField>
    <fullName>To_Location__c</fullName>
    <inlineHelpText>Please enter the location detail, for example &quot;airport&quot;, &quot;hotel&quot;, &quot;port&quot; etc.</inlineHelpText>
    <label>To Location</label>
    <length>35</length>
    <type>Text</type>
</CustomField>