force-app/main/default/objects/Transfer__c/fields/Transfer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Comments__c</fullName>
    <inlineHelpText>Please specify if there are any special requirements for this transfer.</inlineHelpText>
    <label>Transfer Comments</label>
    <type>TextArea</type>
</CustomField>