force-app/main/default/objects/Transfer__c/fields/Transfer_Type__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Type__c</fullName>
    <inlineHelpText>Please select the type of transfer either &quot;private&quot; or &quot;group.&quot;</inlineHelpText>
    <label>Transfer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>